maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:38: error: not enough arguments for method noteIndication: (x: Int, y: Int, i: Int, anciX: Int, anciY: Int)Unit.
Unspecified value parameters anciX, anciY.
  if (anciX != -1 && anciY != -1) noteIndication(anciX, anciY, i-1);
                                                ^ShortestPathMaze:40: error: not enough arguments for method noteIndication: (x: Int, y: Int, i: Int, anciX: Int, anciY: Int)Unit.
Unspecified value parameters anciX, anciY.
  if (y>0 && getIndication(x,y-1) == 9999 && !aMurNord(x,y)) noteIndication(x, y-1, i+1);
                                                                           ^ShortestPathMaze:41: error: not enough arguments for method noteIndication: (x: Int, y: Int, i: Int, anciX: Int, anciY: Int)Unit.
Unspecified value parameters anciX, anciY.
  if (x<n && getIndication(x+1,y) == 9999 && !aMurOuest(x+1,y)) noteIndication(x+1, y, i+1);
                                                                              ^ShortestPathMaze:42: error: not enough arguments for method noteIndication: (x: Int, y: Int, i: Int, anciX: Int, anciY: Int)Unit.
Unspecified value parameters anciX, anciY.
  if (y<m && getIndication(x,y+1) == 9999 && !aMurNord(x,y+1)) noteIndication(x, y+1, i+1);
                                                                             ^ShortestPathMaze:43: error: not enough arguments for method noteIndication: (x: Int, y: Int, i: Int, anciX: Int, anciY: Int)Unit.
Unspecified value parameters anciX, anciY.
  if (x>0 && getIndication(x-1,y) == 9999 && !aMurOuest(x,y)) noteIndication(x-1, y, i+1);
                                                                            ^